fixed the overlap issue with the footer

--- a/frontend/src/components/footer/footer.module.css
+++ b/frontend/src/components/footer/footer.module.css
@@ -1,9 +1,7 @@
 .outermostcontainer{
     width: 100vw;
     height: 45rem;
-    position: absolute;
-    bottom: 0;
-    left: 0;
+    position: relative;
     overflow: hidden;
 }
 
